Improving the assignments, adding the final assignment

--- a/IBM_PY0101EN/mod_02_data_structs.ipynb
+++ b/IBM_PY0101EN/mod_02_data_structs.ipynb
@@ -58,16 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'set'>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'A', 'B', 'C', 'Z'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,6 +85,8 @@
     "S={'A','B','C'}\n",
     "\n",
     "U={'A','Z','C'}\n",
+    "\n",
+    "print(type(S))\n",
     "\n",
     "U.union(S)\n"
    ]
@@ -197,7 +206,8 @@
     }
    ],
    "source": [
-    "# Question 2: After applying the following method, L.append(['a','b']), the following list will only be one element longer.\n",
+    "# Question 2: After applying the following method, L.append(['a','b']),\n",
+    "#             the following list will only be one element longer.\n",
     "L = ['c', 'd']\n",
     "L.append(['a','b'])\n",
     "L"
