--- a/IBM_PY0101EN/mod_04_work_with_data.ipynb
+++ b/IBM_PY0101EN/mod_04_work_with_data.ipynb
@@ -55,14 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('File ', 'data/niche_expertise.txt', ' content: ', 'Our niche expertise covers: \\n\\xe2\\x80\\xa2 Go-to-Market Roles:  Account Executive  /  Pre-sales Consultant  /  VP Sales  /  Business Development Executive\\n\\xe2\\x80\\xa2 Big Data:  Hadoop  /  Spark  /  Cloudera  /   MapR Tech  /  Hortonworks \\n\\xe2\\x80\\xa2 Data Science:  R  /  Python  /  Matlab  /  SAS / Cognos\\n\\xe2\\x80\\xa2 BI Suite:  MSBI  /  Tableau  /  Sisense  /  Power BI  /  QlikView\\n\\xe2\\x80\\xa2 Machine Learning:  Keras  /  Torch  /   Ms Azure  /  AML  /  Tensorflow\\n\\xe2\\x80\\xa2 Cloud:  AWS  /  Azure  /  Google Cloud Platform\\n\\xe2\\x80\\xa2 Software Engineering: JavaScript (Vue, React, Angular etc)  /  TypeScript  /  Java (Spring, MVC, Struts etc)  /  .NET \\n\\xe2\\x80\\xa2 Other Digital Roles: Business Analysis  /   Automated Test Engineering  /  Project Management  /  Scrum Master  /  Platform Engineering')\n"
+      "File data/niche_expertise.txt content: Our niche expertise covers: \n",
+      "• Go-to-Market Roles:  Account Executive  /  Pre-sales Consultant  /  VP Sales  /  Business Development Executive\n",
+      "• Big Data:  Hadoop  /  Spark  /  Cloudera  /   MapR Tech  /  Hortonworks \n",
+      "• Data Science:  R  /  Python  /  Matlab  /  SAS / Cognos\n",
+      "• BI Suite:  MSBI  /  Tableau  /  Sisense  /  Power BI  /  QlikView\n",
+      "• Machine Learning:  Keras  /  Torch  /   Ms Azure  /  AML  /  Tensorflow\n",
+      "• Cloud:  AWS  /  Azure  /  Google Cloud Platform\n",
+      "• Software Engineering: JavaScript (Vue, React, Angular etc)  /  TypeScript  /  Java (Spring, MVC, Struts etc)  /  .NET \n",
+      "• Other Digital Roles: Business Analysis  /   Automated Test Engineering  /  Project Management  /  Scrum Master  /  Platform Engineering\n"
      ]
     }
    ],
@@ -71,7 +79,7 @@
     "with open(\"data/niche_expertise.txt\", \"r\") as my_file:\n",
     "    content = my_file.read()\n",
     "\n",
-    "print(\"File \", my_file.name, \" content: \", content)\n"
+    "print(\"File \" + my_file.name + \" content: \" + content)\n"
    ]
   },
   {
