Finished the third module, and starting on the fourth one: Model Development

--- a/IBM_DA0101EN/mod_02_data_wrangling.ipynb
+++ b/IBM_DA0101EN/mod_02_data_wrangling.ipynb
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1079,6 @@
        "symboling               int64\n",
        "normalized-losses       int64\n",
        "make                   object\n",
-       "fuel-type              object\n",
        "aspiration             object\n",
        "num-of-doors           object\n",
        "body-style             object\n",
@@ -1097,18 +1096,19 @@
        "bore                  float64\n",
        "stroke                float64\n",
        "compression-ratio     float64\n",
-       "horsepower             object\n",
+       "horsepower              int64\n",
        "peak-rpm              float64\n",
        "city-lpg              float64\n",
        "highway-mpg             int64\n",
        "price                 float64\n",
        "price-binned         category\n",
-       "diesel                   bool\n",
-       "gas                      bool\n",
+       "horsepower-binned    category\n",
+       "diesel                  uint8\n",
+       "gas                     uint8\n",
        "dtype: object"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,6 +1126,7 @@
     "df[[\"normalized-losses\"]] = df[[\"normalized-losses\"]].astype(\"int\")\n",
     "df[[\"price\"]] = df[[\"price\"]].astype(\"float\")\n",
     "df[[\"peak-rpm\"]] = df[[\"peak-rpm\"]].astype(\"float\")\n",
+    "df[[\"horsepower\"]]=df[[\"horsepower\"]].astype(\"int\")\n",
     "\n",
     "df.dtypes"
    ]
@@ -1470,6 +1471,16 @@
     "df.drop(\"fuel-type\", axis = 1, inplace = True)\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the resulting data\n",
+    "df.to_csv(\"data\" + os.path.sep + \"autos_85_clean.csv\", index=False)"
    ]
   },
   {
