Finished IBM_DA0101EN, starting on IBM_DV0101EN

--- a/IBM_DA0101EN/mod_03_exp_dat_anal.ipynb
+++ b/IBM_DA0101EN/mod_03_exp_dat_anal.ipynb
@@ -411,15 +411,15 @@
    ],
    "source": [
     "# Value counts\n",
-    "drive_wheels_cunts = df[\"drive-wheels\"].value_counts().to_frame()\n",
+    "drive_wheels_counts = df[\"drive-wheels\"].value_counts().to_frame()\n",
     "\n",
-    "display(drive_wheels_cunts)\n",
+    "display(drive_wheels_counts)\n",
     "\n",
-    "print(type(drive_wheels_cunts))\n",
+    "print(type(drive_wheels_counts))\n",
     "\n",
-    "drive_wheels_cunts.rename(columns = {\"drive-wheels\":\"value_counts\"}, inplace = True)\n",
-    "drive_wheels_cunts.index.name = \"drive-wheels\"\n",
-    "drive_wheels_cunts.head()"
+    "drive_wheels_counts.rename(columns = {\"drive-wheels\":\"value_counts\"}, inplace = True)\n",
+    "drive_wheels_counts.index.name = \"drive-wheels\"\n",
+    "drive_wheels_counts.head()"
    ]
   },
   {
@@ -765,19 +765,19 @@
     "fig, ax = plt.subplots()\n",
     "im = ax.pcolor(df_pivot, cmap=\"RdBu\")\n",
     "\n",
-    "#label names\n",
+    "# Label names\n",
     "row_labels = df_pivot.columns.levels[1]\n",
     "col_labels = df_pivot.index\n",
     "\n",
-    "#move ticks and labels to the center\n",
+    "# Move ticks and labels to the center\n",
     "ax.set_xticks(np.arange(df_pivot.shape[1]) + 0.5, minor=False)\n",
     "ax.set_yticks(np.arange(df_pivot.shape[0]) + 0.5, minor=False)\n",
     "\n",
-    "#insert labels\n",
+    "# Insert labels\n",
     "ax.set_xticklabels(row_labels, minor=False)\n",
     "ax.set_yticklabels(col_labels, minor=False)\n",
     "\n",
-    "#rotate label if too long\n",
+    "# Rotate label if too long\n",
     "plt.xticks(rotation=90)\n",
     "\n",
     "fig.colorbar(im)\n",
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "# Analysis of Variance (ANOVA): Find correlation between different groupd of categorical variables\n",
+    "# Analysis of Variance (ANOVA): Find correlation between different groups of categorical variables\n",
     "df_anova = df[[\"make\", \"price\"]]\n",
     "df_anova_grouped = df_anova.groupby([\"make\"])\n",
     "\n",
