--- a/IBM_DA0101EN/mod_04_model_devel.ipynb
+++ b/IBM_DA0101EN/mod_04_model_devel.ipynb
@@ -429,6 +429,7 @@
     "# The average squared difference between \n",
     "# the estimated values and the actual value.\n",
     "# Or the expected value of the squared error loss.\n",
+    "# The lower the value is - the better\n",
     "\n",
     "mse_val = mean_squared_error(Y, Yhat)\n",
     "\n",
@@ -456,6 +457,7 @@
     "# Getting 0 means that the model result is about as \n",
     "# good as using the mean of the data points.\n",
     "# WATNING: if R^2 is negative then we have an overfitting!\n",
+    "# The higher the value is the better, 1 is maximum\n",
     "\n",
     "X = df[[\"horsepower\"]]\n",
     "Y = df[[\"price\"]]\n",
