Minor fixes and improvements

--- a/IBM_DS0720EN/capstone_01.ipynb
+++ b/IBM_DS0720EN/capstone_01.ipynb
@@ -9,7 +9,10 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import ibm_boto3\n",
+    "\n",
+    "from botocore.client import Config"
    ]
   },
   {
