--- a/IBM_DS0720EN/capstone_02.ipynb
+++ b/IBM_DS0720EN/capstone_02.ipynb
@@ -30,14 +30,73 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import ibm_boto3\n",
+    "\n",
+    "from botocore.client import Config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @hidden_cell\n",
+    "SECURITY_DUMMY = '----------------'\n",
+    "erm2_nwe9_creds = {\n",
+    "    'IAM_SERVICE_ID'    : SECURITY_DUMMY,\n",
+    "    'IBM_API_KEY_ID'    : SECURITY_DUMMY,\n",
+    "    'ENDPOINT'          : 'https://s3.eu-geo.objectstorage.service.networklayer.com',\n",
+    "    'IBM_AUTH_ENDPOINT' : 'https://iam.eu-gb.bluemix.net/oidc/token',\n",
+    "    'BUCKET'            : SECURITY_DUMMY,\n",
+    "    'FILE'              : 'erm2_nwe9.csv'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Allows to get the data source for the credentials from the IBM cloud or local csv file \n",
+    "def get_data_source(credentials) :\n",
+    "    '''Creates a data source from the IBM cloud or local csv file according to the credentials'''\n",
+    "    # Here we check if the credentials are present, if not try \n",
+    "    # load the local file if they are then read from the cloud.\n",
+    "    if credentials.get('IAM_SERVICE_ID') == SECURITY_DUMMY :\n",
+    "        # This is the alternative to get the code run locally with a local csv file\n",
+    "        body = 'data' + os.path.sep + credentials.get('FILE')\n",
+    "    else :\n",
+    "        client = ibm_boto3.client(\n",
+    "            service_name = 's3',\n",
+    "            ibm_api_key_id = credentials.get('IBM_API_KEY_ID'),\n",
+    "            ibm_auth_endpoint = credentials.get('IBM_AUTH_ENDPOINT'),\n",
+    "            config = Config(signature_version='oauth'),\n",
+    "            endpoint_url = credentials.get('ENDPOINT'))\n",
+    "\n",
+    "        body = client.get_object(\n",
+    "            Bucket = credentials.get('BUCKET'),\n",
+    "            Key = credentials.get('FILE'))['Body']\n",
+    "\n",
+    "        # add missing __iter__ method, so pandas accepts body as file-like object\n",
+    "        def __iter__(self): return 0\n",
+    "        if not hasattr(body, \"__iter__\"): body.__iter__ = types.MethodType( __iter__, body )\n",
+    "\n",
+    "    return body"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the data source for the credentials\n",
+    "ds = get_data_source(erm2_nwe9_creds)\n",
     "\n",
     "# Read the CSV file\n",
-    "def load_df(file_name):\n",
-    "    df = pd.read_csv('data' + os.path.sep + file_name + '.csv', parse_dates = True, low_memory=False)\n",
-    "    return df\n",
-    "\n",
-    "# Load the erm2_nwe9 data set\n",
-    "dhp_df = load_df('erm2_nwe9')"
+    "dhp_df = pd.read_csv(ds, parse_dates = True, low_memory=False)"
    ]
   },
   {
@@ -51,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +505,7 @@
        "STATEN ISLAND   1311   2148   2197   2073   2293   2084"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1821,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This means that, generally speaking we can not compute the exact number of 'HEAT/HOT WATER' complaints at the street level unless we can not distinguish different streets with the same names not bound to one zip area. Given the data set at hand the latter does not seem to be feasible, which means the street level analysis is generally not possible."
+    "This means that, generally speaking we can not compute the exact number of 'HEAT/HOT WATER' complaints at the street level unless we can distinguish different streets with the same names in different boroughs/zip areas. Given the data set at hand the latter does not seem to be feasible, which means the street level analysis is generally not possible."
    ]
   },
   {
@@ -1775,21 +1834,20 @@
     "    \n",
     "> Should the Department of Housing Preservation and Development of New York City focus on any particular set of boroughs, ZIP codes, or street (where the complaints are severe) for the specific type of complaints you identified in response to Question 1?\n",
     "\n",
-    "Therefore, since the answer to Question 1 was: the 'HEAT/HOT WATER' complaints we went on with analyzing those.\n",
-    "The analysis was split into three sections:\n",
+    "The answer to Question 1 was the 'HEAT/HOT WATER' complaints. Therefore, we went on analysing this type of complaints for the previous years, i.e. considering the complaints until 31st December 2019. The analysis was split into the three sections:\n",
     "\n",
     "* 'Analysis for boroughs'\n",
     "* 'Analysis for zip code areas'\n",
     "* 'Analysis for streets'\n",
     "\n",
-    "Each of these sections has its own local conclusions so here we shall just summarize:\n",
+    "Each of these sections has its own local conclusions so below we will only summarize the results.\n",
     "\n",
     "The 'Analysis for boroughs' revealed that the top two critical boroughs are 'BRONX' and 'BROOKLYN':"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1992,12 +2050,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The table above shows the number of 'HEAT/HOT WATER' complaints per zip code area per year, and the average complain counts. The rows are ordered by the column values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['avg_count', 2019, 2018, 2017, 2016, 2015, 2014]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(order)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, for the 'Analysis for streets' we have identified that there are equally named streets present in different boroughs and zip code areas:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2020,10 +2102,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identifying unique streets, based on the data set at hand, is impossible. Therefore, the complaint analysis at the street level cound not be performed.\n",
+    "Identifying unique streets, based on the data set at hand, is thus generally impossible. Therefore, the complaint analysis at the street level cound not be performed.\n",
     "\n",
     "Please note that, all additional/detailed visualizations and analysis are present in the corresponding sections above."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
