Minor fixes and improvements

--- a/IBM_DS0720EN/capstone_02.ipynb
+++ b/IBM_DS0720EN/capstone_02.ipynb
@@ -2074,6 +2074,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are generally 15 outlier zip code areas that could be considered for extra attention.\n",
+    "\n",
     "Finally, for the 'Analysis for streets' we have identified that there are equally named streets present in different boroughs and zip code areas:"
    ]
   },
@@ -2102,7 +2104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Identifying unique streets, based on the data set at hand, is thus generally impossible. Therefore, the complaint analysis at the street level cound not be performed.\n",
+    "Identifying unique streets, based on the data set at hand, is thus generally impossible. Therefore, the complaint analysis at the street level is not recommended and was not performed. If however it was feasible to distinguish different streets with equal names, then the analysis would follow the exact same lines as was done for the zip code areas.\n",
     "\n",
     "Please note that, all additional/detailed visualizations and analysis are present in the corresponding sections above."
    ]
