Minor text improvements

--- a/IBM_DS0720EN/capstone_02.ipynb
+++ b/IBM_DS0720EN/capstone_02.ipynb
@@ -14,7 +14,8 @@
     "\n",
     "In this exercise, we will use 311 Dataset to determine whether to focus on any particular borough, ZIP code, or street (where the complaints are severe) for the specific Complaint Type we decided to focus at the end of the last exercise.\n",
     "\n",
-    "## Load and pre-process the data:\n",
+    "# Load and pre-process the data:\n",
+    "\n",
     "First we shall import the required packages, and load the data fram from the CSV file.\n",
     "\n",
     "Please note that the code below allows to both: load the csv file from the IBM cloud storage and a local csv file. The latter is done for convenience in case one is to re-run the script offline."
